// SPDX-FileCopyrightText: 2018 - 2023 Deepin Technology Co., Ltd.
//
// SPDX-License-Identifier: LGPL-3.0-or-later

syntax = "proto3";

message TransferRequest {
    uint32 transferId = 1;
}

message TransferResponse {
    uint32 transferId = 1;
    bool accepted = 2;
    int32 port = 3;             // TCP 端口
}

message StopTransferRequest {
    uint32 transferId = 1;
}

message StopTransferResponse {
    uint32 transferId = 1;
}

message SendFileRequest {
    string relPath = 1;         // 发送对象的相对路径，如发送文件夹 AA 时，下面的文件为 AA/BB.txt
}

message SendFileResponse {
    string relPath = 1;         // 发送对象的相对路径，如发送文件夹 AA 时，下面的文件为 AA/BB.txt
}

message SendFileChunkRequest {
    string relPath = 1;         // 发送对象的相对路径，如发送文件夹 AA 时，下面的文件为 AA/BB.txt
    uint32 serial = 2;
    uint64 offset = 3;          // 块起点
    bytes data = 5;             // 块数据
}

message SendFileChunkResponse {
    uint32 serial = 1;
}

message StopSendFileRequest {
    string relPath = 1;         // 发送对象的相对路径，如发送文件夹 AA 时，下面的文件为 AA/BB.txt
    string sha256 = 2;          // 文件哈希
}

message StopSendFileResponse {
    string relPath = 1;         // 发送对象的相对路径，如发送文件夹 AA 时，下面的文件为 AA/BB.txt
    string sha256 = 2;          // 文件哈希
    bool correct = 3;           // 是否成功(校验哈希)
}

message SendDirRequest {
    string relPath = 1;         // 发送对象的相对路径，如发送文件夹 AA 时，下面的文件为 AA/BB.txt
}

message SendDirResponse {
    string relPath = 1;         // 发送对象的相对路径，如发送文件夹 AA 时，下面的文件为 AA/BB.txt
}
