// SPDX-FileCopyrightText: 2018 - 2023 Deepin Technology Co., Ltd.
//
// SPDX-License-Identifier: LGPL-3.0-or-later

syntax = "proto3";

// windows need know uos-end sharedClipboard on status
// TCP; paired 后发送；服务状态变化发送
message ServiceOnOffNotification
{
    bool sharedClipboardOn = 1;
    bool sharedDevicesOn = 2;
}